[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "thrj-processor-service"
version = "0.1.0"
description = "Cloudflare Python Worker"
requires-python = ">=3.12"

[dependency-groups]
dev = [
  "workers-py",
  "workers-runtime-sdk"
]