[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[project]
name = "thrj-processor-service"
version = "0.1.0"
description = "Cloudflare Python Worker"
requires-python = ">=3.12"

[dependency-groups]
dev = [
  "workers-py",
  "workers-runtime-sdk"
]